# utils-monorepo

./: .gitignore  .pre-commit-config.yaml  README.md
TODO utils libs yet to create/: TODO.md  bool_utils.py  dataclass_utils.py  emoji_utils.py  env_utils.py  files_utils.py  fqn.py  humanize_utils.py  numbers_utils.py  pydantic_utils - its tests.py  pydantic_utils.py  regex_utils.py  settings_testutils.py  stub_player_testutils.py  task_queue_utils.py  text_utils.py  zip_utils.py
aws-utils/: README.md  TODO.md  pyproject.toml
aws-utils/aws_utils/: __init__.py  aws_lambda_utils.py
aws-utils/aws_utils/aws_testfactories/: api_gateway_event_to_lambda_factory.py  dynamodb_event_to_lambda_factory.py  eventbridge_scheduler_event_to_lambda_factory.py  lambda_context_factory.py  sns_event_to_lambda_factory.py
aws-utils/aws_utils/aws_testfactories/TODO yet to create/: cloudwatch_event_factory.py  event_bridge_event_factory.py  s3_factory.py  sns_event_factory.py  sns_factory.py  sqs_event_factory.py  sqs_factory.py
cache-utils/: Makefile  README.md  pyproject.toml
cache-utils/cache_utils/: cache_utils.py
cache-utils/tests/: test_cache_utils.py
checksum-utils/: README.md  pyproject.toml
checksum-utils/checksum_utils/: __init__.py  checksum_utils.py
checksum-utils/tests/: test_checksum_utils.py
datetime-utils/: Makefile  README.md  pyproject.toml
datetime-utils/datetime_utils/: __init__.py  datetime_testutils.py  datetime_utils.py
datetime-utils/tests/: test_datetime_testutils.py  test_datetime_utils.py
gis-utils/: README.md  pyproject.toml
gis-utils/gis_utils/: __init__.py  gis_utils.py
gis-utils/tests/: test_gis_utils.py
json-utils/: README.md  pyproject.toml
json-utils/json_utils/: __init__.py  json_utils.py
json-utils/tests/: test_json_utils.py
log-utils/: Makefile  README.md  pyproject.toml
log-utils/log_utils/: __init__.py  log_adapter.py  loguru_utils.py  powertools_utils.py  rich_utils.py  std_lib_logging_utils.py
log-utils/log_utils/adapters/: base_adapter.py  loguru_adapter.py  powertools_adapter.py  rich_adapter.py  std_lib_logging_adapter.py
log-utils/tests/: test_log_adapter_loguru.py  test_log_adapter_powertools.py  test_log_adapter_rich.py  test_log_adapter_std_lib_logging.py  test_log_utils.py
number-utils/: Makefile  README.md  pyproject.toml
number-utils/number_utils/: __init__.py  number_utils.py
number-utils/tests/: test_number_utils.py
peewee-utils/: README.md  pyproject.toml
peewee-utils/peewee_utils/: __init__.py  peewee_models_utils.py  peewee_models_utils_old.py  peewee_utils.py  peewee_utils_old.py
peewee-utils/tests/: test_peewee_utils.py  test_peewee_utils_old.py
pydantic-utils/: Makefile  README.md  pyproject.toml
pydantic-utils/pydantic_utils/: __init__.py  pydantic_utils.py
pydantic-utils/tests/: test_pydantic_utils.py
retry-utils/: README.md  pyproject.toml
retry-utils/retry_utils/: __init__.py  retry_utils.py
retry-utils/tests/: test_retry_utils.py
settings-utils/: README.md  pyproject.toml
settings-utils/settings_utils/: __init__.py  settings_testutils.py  settings_utils.py
settings-utils/tests/: conftest.py  test_settings_testutils.py  test_settings_utils.py
speed-utils/: Makefile  README.md  pyproject.toml
speed-utils/speed_utils/: __init__.py  speed_utils.py
speed-utils/tests/: test_speed_utils.py
text-utils/: README.md  pyproject.toml
text-utils/tests/: test_text_utils.py
text-utils/text_utils/: text_utils.py
vcr-utils/: README.md  pyproject.toml
vcr-utils/tests/: car.py  test_vcr_utils.py
vcr-utils/tests/cassettes/test_vcr_utils.py/: TestVcrUtils.test_happy_flow.pickle
vcr-utils/vcr_utils/: __init__.py  vcr_utils.py
