[project]
name = "aws-utils"
description = "Utils Monorepo: AWS Utils"
version = "1.0.0"
authors = [
    {name = "puntonim",email = "puntonim@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4"  # <4 required only by the extra aws-lambda-powertools.
dependencies = [
    "json-utils @ git+https://github.com/puntonim/utils-monorepo#subdirectory=json-utils",
    "log-utils @ git+https://github.com/puntonim/utils-monorepo#subdirectory=log-utils"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.optional-dependencies]
# Extra (optional) dependencies that users of this project might choose to install or not.
#
# In order to use @redact_http_headers() to decorate a lambda_handler(), AWS Lambda
#  Powertools for Pyton is required.
lambda-redact-http-headers = ["aws-lambda-powertools[aws-sdk] (>=3.22.0,<4.0.0)"]

[tool.poetry.group.dev.dependencies]
black = "24.10.0"
isort = "5.13.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-xdist = {extras = ["psutil"], version = "^3.6.1"}

[tool.black]  # See: https://black.readthedocs.io/en/stable/pyproject_toml.html
line-length = 88  # Default.
# skip-string-normalization = true  # Only for old projects.
target-version = ["py310"]
include = '\.py?$'
extend-exclude = '''  # It automatically excludes all files in .gitignore by default.
/(
    \.git
  # Project-specific:
  | docs
)/
'''

[tool.isort]
profile = "black"  # See: https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#profile
skip_gitignore = true  # Skip all files in .gitignore.
