[project]
name = "checksum-utils"
description = "Checksum Utils"
version = "1.0.0"
authors = [
    {name = "puntonim",email = "puntonim@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "json-utils @ ../json-utils"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
# This section is required only when there are editable (develop = true) dependencies.
json-utils = {develop = true}

[tool.poetry.group.dev.dependencies]
black = "24.10.0"
isort = "5.13.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-xdist = {extras = ["psutil"], version = "^3.6.1"}

[tool.black]  # See: https://black.readthedocs.io/en/stable/pyproject_toml.html
line-length = 88  # Default.
# skip-string-normalization = true  # Only for old projects.
target-version = ["py310"]
include = '\.py?$'
extend-exclude = '''  # It automatically excludes all files in .gitignore by default.
/(
    \.git
  # Project-specific:
  | docs
)/
'''

[tool.isort]
profile = "black"  # See: https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#profile
skip_gitignore = true  # Skip all files in .gitignore.
